--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,7 @@
   link: /
   anchor: '#publications'
   highlight: false
+- name: Awards & Honors
+  link: /
+  anchor: '#awards'
+  highlight: false
