--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,10 +1,13 @@
 - title: "title 1"
   images:
-    - "/images/site.jpg"
-    - "/images/site.jpg"
+    - "/gallery/2025-9-6-0.jpg"
+    - "/gallery/2025-9-6-1.jpg"
+    - "/gallery/2025-9-6-2.jpg"
   description: "..."
 - title: "title 2"
-  image:
-    - "/images/bio.jpg"
-    - "/images/gallery-bio.jpg"
+  images:
+    - "/gallery/2024-12-1-0.jpg"
+    - "/gallery/2024-12-1-1.jpg"
+    - "/gallery/2024-12-1-2.jpg"
+    - "/gallery/2024-12-1-3.jpg"
   description: "..."
