--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -4,11 +4,11 @@
     - "/gallery/2025-9-6-1.jpg"
     - "/gallery/2025-9-6-2.jpg"
   description: "..."
-- title: "title 2"
+- title: "Fu (2025-02)"
   images:
     - "/gallery/2025-2-24.jpg"
   description: "..."
-- title: "title 3"
+- title: "Surpass (2024-12)"
   images:
     - "/gallery/2024-12-1-0.jpg"
     - "/gallery/2024-12-1-1.jpg"
