--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,9 +1,9 @@
-- title: "title 1"
+- title: "Blossoms in Watercolor (2025-09)"
   images:
     - "/gallery/2025-9-6-0.jpg"
     - "/gallery/2025-9-6-1.jpg"
     - "/gallery/2025-9-6-2.jpg"
-  description: "..."
+  description: "Floral paintings created with watercolor using traditional Chinese painting techniques.\n ..."
 - title: "Fu (2025-02)"
   images:
     - "/gallery/2025-2-24.jpg"
