--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -3,7 +3,9 @@
     - "/gallery/2025-9-6-0.jpg"
     - "/gallery/2025-9-6-1.jpg"
     - "/gallery/2025-9-6-2.jpg"
-  description: "Floral paintings created with watercolor using traditional Chinese painting techniques.\n ..."
+  description: | 
+    Floral paintings created with watercolor using traditional Chinese painting techniques.
+    **Fun fact**: These were my first paintings made in the US, created with the Chinese brush I brought from home and watercolor paints and paper purchased here.
 - title: "Fu (2025-02)"
   images:
     - "/gallery/2025-2-24.jpg"
