--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,14 @@
+- title: "Mid-Autumn Miniatures (2025-10)"
+  images:
+    - "/gallery/2025-10-5-0.jpg"
+    - "/gallery/2025-10-5-1.jpg"
+    - "/gallery/2025-10-5-2.jpg"
+    - "/gallery/2025-10-5-3.jpg"
+    - "/gallery/2025-10-5-4.jpg"
+    - "/gallery/2025-10-5-5.jpg"
+    - "/gallery/2025-10-5-6.jpg"
+  description: | 
+    A collection of small paintings inspired by traditional Mid-Autumn Festival motifs. Each element carries a symbolic wish: osmanthus for "折桂" (success), lily bulbs and persimmons for "百事如意" (happiness and success in everything).
 - title: "Blossoms in Watercolor (2025-09)"
   images:
     - "/gallery/2025-9-6-0.jpg"
@@ -11,15 +22,28 @@
     - "/gallery/2024-12-1-0.jpg"
     - "/gallery/2024-12-1-1.jpg"
     - "/gallery/2024-12-1-2.jpg"
-  description: "..."
-- title: "Flow (2024-5)"
+  description: |
+    A Chinese painting featuring lotus infused with elements inspired by Dunhuang "Feitian". This piece received First Prize at the 2024 SJTU Nanyang Calligraphy & Painting Competition.  
+    Although only a close-up is shown here, the complete work can (hopefully) still be found on display in ZhiYuan College at SJTU.  
+    **Fun fact**: The competition theme was "Surpass", and I originally intended to call it 《携手超越》 "Together, We Surpass".
+- title: "Flow (2024-05)"
   images:
     - "/gallery/2024-5-25-0.jpg"
     - "/gallery/2024-5-25-1.jpg"
-  description: "..."
+  description: "The fluidity and movement of trees."
 - title: "Fu (2024-02)"
   images:
     - "/gallery/2024-2-24.jpg"
   description: |
     A calligraphic work featuring the character "福" (fortune), created as a 2024 New Year blessing for ACM Class. The gold-painted elements blend traditional symbolism with contemporary design: a dragon motif on the left, while the right side incorporates creative letterforms with the ACM class emblem.  
     The letterforms are inspired by artist [XU BING](https://www.xubing.com/cn)
+- title: "Zhiyuan (2023-04)"
+  images:
+    - "/gallery/2023-4-22-0.jpg"
+  description: |
+    A creative interpretation of the Chinese phrase "致远", inspired by [XU BING](https://www.xubing.com/cn). In this piece, the character is deconstructed and reconstructed using the letters Z-H-I and Y-U-A-N.
+- title: "Xiao or Piety (2023-02)"
+  images:
+    - "/gallery/2023-2-1-0.jpg"
+  description: |
+    A creative interpretation of "孝" (piety), inspired by [XU BING](https://www.xubing.com/cn). In this piece, the character is deconstructed and reconstructed using the letters P-I-E-T-Y.
