--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -8,7 +8,7 @@
     - "/gallery/2025-10-5-5.jpg"
     - "/gallery/2025-10-5-6.jpg"
   description: | 
-    A collection of small paintings inspired by traditional Mid-Autumn Festival motifs. Each element carries a symbolic wish: osmanthus for "折桂" (success), lily bulbs and persimmons for "百事如意" (happiness and success in everything).
+    A collection of small paintings inspired by traditional Mid-Autumn Festival motifs, with selected studies from Zhu Lesan. Each element carries a symbolic wish: osmanthus for "折桂" (success), lily bulbs and persimmons for "百事如意" (happiness and success in everything).
 - title: "Blossoms in Watercolor (2025-09)"
   images:
     - "/gallery/2025-9-6-0.jpg"
@@ -25,7 +25,7 @@
   description: |
     A Chinese painting featuring lotus infused with elements inspired by Dunhuang "Feitian". This piece received First Prize at the 2024 SJTU Nanyang Calligraphy & Painting Competition.  
     Although only a close-up is shown here, the complete work can (hopefully) still be found on display in ZhiYuan College at SJTU.  
-    **Fun fact**: The competition theme was "Surpass", and I originally intended to call it 《携手超越》 "Together, We Surpass".
+    **Fun fact**: The competition theme was "Surpass", and I originally intended to call it 《携手超越》 (Together, We Surpass).
 - title: "Flow (2024-05)"
   images:
     - "/gallery/2024-5-25-0.jpg"
@@ -37,6 +37,12 @@
   description: |
     A calligraphic work featuring the character "福" (fortune), created as a 2024 New Year blessing for ACM Class. The gold-painted elements blend traditional symbolism with contemporary design: a dragon motif on the left, while the right side incorporates creative letterforms with the ACM class emblem.  
     The letterforms are inspired by artist [XU BING](https://www.xubing.com/cn)
+- title: "Lotus (2023-11)"
+  images:
+    - "/gallery/2023-11-13-0.jpg"
+  description: |
+    Could I carve out a piece of rebellious persistence in this serene haven? (可否容许我在这方净土留一份不合时宜的倔强)  
+    with selected studies from an unknown source
 - title: "Zhiyuan (2023-04)"
   images:
     - "/gallery/2023-4-22-0.jpg"
